# capa

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  main.js  modal_app.py  package-lock.json  package.json  preload.js  pyproject.toml
.github/workflows/: ci.yml
capa/: __init__.py  config.py
capa/api/: __init__.py  predict.py  schemas.py
capa/data/: __init__.py  hla_parser.py  loader.py  splits.py
capa/embeddings/: __init__.py  cache.py  esm_embedder.py  hla_sequences.py
capa/interpret/: __init__.py  attention_maps.py  shap_explain.py
capa/model/: __init__.py  baselines.py  capa_model.py  interaction.py  losses.py  survival.py
capa/training/: __init__.py  calibrate.py  evaluate.py  trainer.py
configs/: default.yaml
data/: README.md
data/results/: real_baselines.json
main/: ipc-handlers.js  main.js
ml/object-detection/: detector.js
notebooks/: 02_embeddings.ipynb
paper/: main.tex  oup-abbrvnat.bst  references.bib  supplementary.tex
paper/oup-authoring-template/: README  manifest.txt  oup-authoring-template.cls  oup-authoring-template.tex
renderer/: index.html  renderer.js
renderer/components/: image-selector.js
renderer/styles/: main.css
scripts/: compare_baselines.py  compute_embeddings.py  download_hla_seqs.py  evaluate.py  generate_debrief.py  generate_figures.py  preprocess.py  run_real_baselines.py  train.py
tests/: test_api.py  test_api_endpoints.py  test_attention_maps.py  test_baselines.py  test_calibrate.py  test_capa_model.py  test_embeddings.py  test_evaluate.py  test_hla_parser.py  test_interaction.py  test_loader.py  test_model.py  test_shap_explain.py  test_splits.py  test_survival_losses.py  test_trainer.py
web/: Dockerfile  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/about/: page.tsx
web/app/api/compare/: route.ts
web/app/api/predict/: route.ts
web/app/compare/: page.tsx
web/app/paper/: page.tsx
web/app/predict/: page.tsx
web/components/: AttentionHeatmap.tsx  FadeIn.tsx  HLACombobox.tsx  HLAInput.tsx  Hero.tsx  Navbar.tsx  RiskChart.tsx  motion.tsx
web/components/ui/: badge.tsx  button.tsx  github-icon.tsx  input.tsx  select.tsx
web/lib/: api.ts
